# dnssec-inwx-updater

./: .gitignore  Makefile  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dnssec_inwx_updater/: cert.py  config.py  inwx.py  main.py  state.py  tlsa.py
docs/superpowers/plans/: 2026-05-08-dnssec-inwx-updater.md
docs/superpowers/specs/: 2026-05-08-dnssec-inwx-updater-design.md
tests/: conftest.py  test_cert.py  test_config.py  test_inwx.py  test_main.py  test_state.py  test_tlsa.py
