[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnssec-inwx-updater"
version = "1.0.1"
description = "Automatically update INWX DANE TLSA DNS records when Caddy Letsencrypt certificates change"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "inwx-domrobot>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
dnssec-inwx-updater = "dnssec_inwx_updater.main:main"

[project.urls]
Homepage = "https://github.com/maschmann/dnssec-inwx-updater"
Repository = "https://github.com/maschmann/dnssec-inwx-updater"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
